# Project_LegionAir

./: .gitignore  README.md  drone.md
drone_cpp/: CMakeLists.txt  package.xml
drone_cpp/config/: params.yaml  params_0.yaml  params_1.yaml  params_2.yaml  params_3.yaml  params_4.yaml
drone_cpp/include/drone_cpp/: drone_node.hpp
drone_cpp/launch/: drone_swarm.launch.py
drone_cpp/src/: drone_node.cpp
drone_swarm_msgs/: CMakeLists.txt  package.xml
drone_swarm_msgs/msg/: DroneStatus.msg  MoveDrone.msg
drone_swarm_msgs/srv/: CalcAngle.srv  DropDrone.srv  MoveDrone.srv  SetAnchorAndNeighbours.srv
kalman_filter_node/: CMakeLists.txt  package.xml
kalman_filter_node/src/: kalman_filter_node.cpp
kalman_filter_ros/: CMakeLists.txt  package.xml  setup.py
kalman_filter_ros/launch/: kalman_filter_ros.launch
kalman_filter_ros/src/: kalman_filter_node.py
px4_ros_com/: CMakeLists.txt  Offboard_Control_Node_Documentation.md  package.xml
px4_ros_com/config/: ns_conf.yaml
px4_ros_com/launch/: launch_swarm.launch.py  offboard_node.launch.py  sensor_combined_listener.launch.py
px4_ros_com/src/examples/offboard/: offboard_control.cpp  offboard_control_constant_velocity.cpp  offboard_control_land.cpp  offboard_control_srv.cpp  offboard_control_velocity_tracking.cpp
px4_ros_com/src/examples/offboard_py/: offboard_control.py  trajectory_controller.py
px4_ros_com/src/lib/: frame_transforms.cpp
swarm_project_sim/: class_simulation.py  simulation.py
tflite_prop_detection/: CMakeLists.txt  TFLite_Property_Detection_Node_Documentation.md  package.xml  setup.py
tflite_prop_detection/config/: ns_conf.yaml
tflite_prop_detection/launch/: tflite_prop_detection.launch  tflite_prop_detection.launch.py
tflite_prop_detection/src/: tflite_prop_detection_cpp_node.cpp  tflite_prop_detection_node.py
voxl_mpa_to_ros/: .gitconfig  CMakeLists.txt
voxl_msgs/: CMakeLists.txt  package.xml
voxl_msgs/msg/: Aidetection.msg
your_pointcloud_package/: CMakeLists.txt  Point_Cloud_Transformer_Node_Documentation.md  package.xml  setup.py
your_pointcloud_package/launch/: pc_test.launch.py  pointcloud_transformer_launch.launch
your_pointcloud_package/src/: pc_transform.cpp  pctransform.py.bak  pointcloud_transformer.py  pointcloud_transformer_rgb.py
your_tf_package/: CMakeLists.txt  Static_Transform_Broadcaster_Node_Documentation.md  package.xml  setup.py
your_tf_package/launch/: tf_publisher_launch.launch
your_tf_package/src/: extrinsics.conf  tf_publisher.py  tf_publisher_cpp_node.cpp
