<?xml version="1.0"?>
<package format="2">
  <name>kalman_filter_ros</name>
  <version>0.0.0</version>
  <description>The kalman_filter package</description>

  <maintainer email="darshit@umd.edu">Darshit Desai</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
