<?xml version="1.0"?>
<package format="3">
  <name>tflite_prop_detection</name>
  <version>0.0.0</version>
  <description>The tflite_prop_detection package</description>
  <license>MIT</license>
  
  <maintainer email="darshit@umd.edu">Darshit Desai</maintainer>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>voxl_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>voxl_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>   
  </export>
</package>
